--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -19,6 +19,6 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: cloudhouse
+  profile: default
   sc: git
   workspace_type: Application
